# cocktails

./: LICENSE  manage.py  pyproject.toml  readme.md
cocktails/: settings.py  urls.py  wsgi.py
cocktails/cocktails/: settings.py  urls.py
ingredients/: admin.py  models.py  serializers.py  tests.py  tests.sql  use_cases.py  views.py
ingredients/management/commands/: load_death_co_cocktails.py
ingredients/migrations/: 0001_initial.py  0002_inventory.py  0003_auto_20190728_1401.py
management/commands/: load_death_co_cocktails.py
